LAMBDA Role arn name changed

--- a/Cloudfront.yml
+++ b/Cloudfront.yml
@@ -19,8 +19,8 @@ Mappings:
     stage:  
       DomainName: 'stage.fayas.com'
       ACMArn: 'arn:aws:acm:us-east-1:AccountID:certificate/21342cd-62e2-45fg-98b6-12456h4fdf'
-      PhoenixLambdaRoleArn: 'arn:aws:iam::<AccountID>:role/redirect-edge-lambda'
+      LambdaRoleArn: 'arn:aws:iam::<AccountID>:role/redirect-edge-lambda'
     production:  
       DomainName: 'fayas.com'
       ACMArn: 'arn:aws:acm:us-east-1:AccountID:certificate/21342cd-62e2-45fg-98b6-12456h4fdf'
-      PhoenixLambdaRoleArn: 'arn:aws:iam::<AccountID>:role/redirect-edge-lambda'
+      LambdaRoleArn: 'arn:aws:iam::<AccountID>:role/redirect-edge-lambda'
