--- a/Cloudfront.yml
+++ b/Cloudfront.yml
@@ -26,45 +26,103 @@ Mappings:
       LambdaRoleArn: 'arn:aws:iam::<AccountID>:role/redirect-edge-lambda'
 
 Resources:
-  CloudFrontFunction:
-    Type: AWS::CloudFront::Function
-    Properties:
-      Name: !Sub '${EnvType}-redirects function'
-      AutoPublish: true
-      FunctionConfig:
-        Comment: !Sub '${EnvType}-redicts-function'
-        Runtime: cloudfront-js-1.0
-      FunctionCode:
-        Fn::Sub:
-          - |
-            function handler(event) {
-              var request = event.request;
+  # CloudFrontFunction:
+  #   Type: AWS::CloudFront::Function
+  #   Properties:
+  #     Name: !Sub '${EnvType}-redirects function'
+  #     AutoPublish: true
+  #     FunctionConfig:
+  #       Comment: !Sub '${EnvType}-redicts-function'
+  #       Runtime: cloudfront-js-1.0
+  #     FunctionCode:
+  #       Fn::Sub:
+  #         - |
+  #           function handler(event) {
+  #             var request = event.request;
               
-              var mapping = {
-                "/who": "https://${Domain}/fayas-akram/",
-                "/about-me": "https://${Domain}/fayas-akram/",
-                "/home": "https://${Domain}/",
-                "/root": "https://${Domain}/"
-              }
-              var redirectURL = mapping[request.uri];
+  #             var mapping = {
+  #               "/who": "https://${Domain}/fayas-akram/",
+  #               "/about-me": "https://${Domain}/fayas-akram/",
+  #               "/home": "https://${Domain}/",
+  #               "/root": "https://${Domain}/"
+  #             }
+  #             var redirectURL = mapping[request.uri];
 
-              if (!!redirectURL) {
-                  var response = {
-                      statusCode: 301,
-                      statusDescription: 'Moved Permanently',
-                      headers: {
-                          'location': {
-                              "value": redirectURL,
-                          },
-                          'cache-control': { "value": "max-age=3600" }
-                      },
-                  };
-                  return response;
-              }
-              else {
-                    return request;
+  #             if (!!redirectURL) {
+  #                 var response = {
+  #                     statusCode: 301,
+  #                     statusDescription: 'Moved Permanently',
+  #                     headers: {
+  #                         'location': {
+  #                             "value": redirectURL,
+  #                         },
+  #                         'cache-control': { "value": "max-age=3600" }
+  #                     },
+  #                 };
+  #                 return response;
+  #             }
+  #             else {
+  #                   return request;
+  #               }
+  #           }
+  #         - {
+  #             Domain: !FindInMap [EnvType, !Ref EnvType, DomainName]
+  #           }
+
+  RedirectEdgeLambda:
+    Type: AWS::Lambda::Function
+    Properties:
+      FunctionName: !Sub '${EnvType}-redirects-lambda'
+      Handler: index.handler
+      Role: !FindInMap [EnvType, !Ref EnvType, LambdaRoleArn]
+      Runtime: nodejs14.x
+      MemorySize: 128
+      Timeout: 5
+      Code:
+        ZipFile:
+          Fn::Sub: 
+            - |
+              exports.handler = (event, context, callback) => {
+
+                let request = event.Records[0].cf.request;
+
+                var mapping = {
+                  "/who": "https://${Domain}/fayas-akram/",
+                  "/about-me": "https://${Domain}/fayas-akram/",
+                  "/home": "https://${Domain}/",
+                  "/root": "https://${Domain}/"
                 }
-            }
-          - {
+
+                var redirectURL = mapping[request.uri];
+
+                if(!!redirectURL){
+                    //Generate HTTP redirect response to a different landing page.
+                    const redirectResponse = {
+                        status: '301',
+                        statusDescription: 'Moved Permanently',
+                        headers: {
+                            'location': [{
+                                key: 'Location',
+                                value: redirectURL,
+                            }],
+                            'cache-control': [{
+                                key: 'Cache-Control',
+                                value: "max-age=3600"
+                            }],
+                        },
+                    };
+                    callback(null, redirectResponse);
+                }
+                else{
+                    // for all other requests proceed to fetch the resources
+                    callback(null, request);
+                }
+              };
+            - {
               Domain: !FindInMap [EnvType, !Ref EnvType, DomainName]
             }
+  
+  RedirectEdgeLambdaVersion:
+    Type: AWS::Lambda::Version
+    Properties:
+      FunctionName: !GetAtt RedirectEdgeLambda.Arn
